Have been test the HTML

--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-Hello there, awesome person!
+<html>
+  <body>
+    Hai my dream is to be a Developer Games , Please Teach me
+    First i will learn the basic
+  </body>
+</html>
