--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+  <head>
+    <title>Hello there!</title>
+  </head>
+  
   <body>
     Hai my dream is to be a Developer Games , Please Teach me
     First i will learn the basic
